--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       gsap.from('.cta',{opacity:0, y:12, duration:.9, delay:.6});
 
       // scroll reveal defaults
-      //ScrollReveal().reveal('.glass', {distance:'20px', duration:800, easing:'ease-in-out', interval:80});
+      ScrollReveal().reveal('.glass', {distance:'20px', duration:800, easing:'ease-in-out', interval:80});
     });
 
     // BACKGROUND PARTICLES: lightweight canvas particles
