--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
     /* subtle entrance helper */
     .sr-hidden{ opacity:0; transform:translateY(12px) }
 
+
+    .carousel {
+  width: 100%;
+}
+
+.carousel img {
+  object-fit: cover;
+  height: auto;
+}
+
   </style>
 </head>
 <body>
@@ -191,24 +201,26 @@
       <div class="row mb-4">
         <div class="col text-center">
           <h2 class="">About Me</h2>
-          <p class="lead">Story, education, and progress — animated for clarity.</p>
+          <p class="lead"><hr></p>
         </div>
       </div>
 
       <div class="row g-4">
         <div class="col-lg-7">
-          <div class="glass p-3">
+          <div class="card p-3">
             <h4>Timeline</h4>
             <div class="timeline mt-3">
               <div class="flip-card glass">
                 <div class="flip-inner">
                   <div class="flip-front p-3">
                     <h6>BCA — Completed</h6>
+                    <hr>
                     <p class="small">Completed Bachelor of Computer Applications with hands-on projects.</p>
                   </div>
                   <div class="flip-back p-3">
                     <h6>Why BCA?</h6>
-                    <p class="small">Built foundation in programming, databases, and system analysis. Led to projects in web and app dev.</p>
+                    <hr>
+                    <p class="small">Built foundation in programming, databases, and Full-Stack Development. Led to projects in web apps.</p>
                   </div>
                 </div>
               </div>
@@ -217,10 +229,12 @@
                 <div class="flip-inner">
                   <div class="flip-front p-3">
                     <h6>ASP.NET & C#</h6>
+                    <hr>
                     <p class="small">Started building web-applications and management systems.</p>
                   </div>
                   <div class="flip-back p-3">
                     <h6>Experience</h6>
+                    <hr>
                     <p class="small">Projects: College Management System, Smart Files Toolkit, Trip Booking System.</p>
                   </div>
                 </div>
@@ -230,11 +244,13 @@
                 <div class="flip-inner">
                   <div class="flip-front p-3">
                     <h6>Databases</h6>
+                    <hr>
                     <p class="small">SQL Server for all my projects.</p>
                   </div>
                   <div class="flip-back p-3">
                     <h6>Skills</h6>
-                    <p class="small">Designing schemas, stored procedures, and performance tuning basics.</p>
+                    <hr>
+                    <p class="small">Designing schemas, stored procedures,SQL Server ,and performance tuning basics.</p>
                   </div>
                 </div>
               </div>
@@ -243,16 +259,61 @@
                 <div class="flip-inner">
                   <div class="flip-front p-3">
                     <h6>AI Tools & Python</h6>
+                    <hr>
                     <p class="small">Learning AI tools and implementing automation scripts.</p>
                   </div>
                   <div class="flip-back p-3">
                     <h6>Toolkit</h6>
+                    <hr>
                     <p class="small">Flask and AI tool integrations for projects.</p>
                   </div>
                 </div>
               </div>
+              </div>
 
-            </div>
+      <div class="mt-4">
+  <div id="timelineCarousel" class="carousel slide w-100" data-bs-ride="carousel">
+    <div class="carousel-inner rounded shadow">
+
+      <div class="carousel-item active">
+        <img src="images/971.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 1" style="height: 300px;">
+      </div>
+
+      <div class="carousel-item">
+        <img src="images/4884785.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 2" style="height: 300px;">
+      </div>
+
+      <div class="carousel-item">
+        <img src="images/person-playing-3d-video-games-device.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 3" style="height: 300px;">
+      </div>
+
+       <div class="carousel-item">
+        <img src="images/dot net course in pune.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 3" style="height: 300px;">
+      </div>
+
+      <div class="carousel-item">
+        <img src="images/generative-ai-tools.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 3" style="height: 300px;">
+      </div>
+
+      <div class="carousel-item">
+        <img src="images/7041508.jpg" class="d-block w-100 img-fluid" alt="Timeline Image 3" style="height: 300px;">
+      </div>
+
+    </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#timelineCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#timelineCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</div>
+
+
+
+            
           </div>
         </div>
 
@@ -274,7 +335,7 @@
       <div class="row mb-4">
         <div class="col text-center">
           <h2 class="">Projects</h2>
-          <p class="lead">Selected projects — hover to explore.</p>
+          <p class="lead"><hr></p>
         </div>
       </div>
 
@@ -441,6 +502,7 @@
           <div class="glass p-4 text-center">
             <h5>Connect</h5>
             <p class="">Find me on</p>
+            
             <div class="d-flex justify-content-center gap-3">
               <a href="https://www.linkedin.com/in/deeven-vm-2670ba313/" title="LinkedIn" class="btn btn-outline-light btn-sm"><i class="fab fa-linkedin"></i></a>
               <a href="https://github.com/deva7411" title="GitHub" class="btn btn-outline-light btn-sm"><i class="fab fa-github"></i></a>
@@ -448,6 +510,9 @@
             </div>
             <hr>
             <p class="small">Or send a quick email to <a href="mailto:enochdeevenvm@example.com">enochdeevenvm@example.com</a></p>
+            <a href="images/My-resume.pdf" download  class="btn btn-primary mt-3">
+                <i class="fas fa-download"></i> Download CV
+                     </a>
           </div>
         </div>
       </div>
@@ -487,7 +552,7 @@
       gsap.from('.cta',{opacity:0, y:12, duration:.9, delay:.6});
 
       // scroll reveal defaults
-      ScrollReveal().reveal('.glass', {distance:'20px', duration:800, easing:'ease-in-out', interval:80});
+     // ScrollReveal().reveal('.glass', {distance:'20px', duration:800, easing:'ease-in-out', interval:80});
     });
 
     // BACKGROUND PARTICLES: lightweight canvas particles
@@ -531,8 +596,7 @@ const skills = [
   { name: 'JavaScript', value: 60 },
   { name: 'Python', value: 40 },
   { name: 'AI Tools', value: 70 },
-  {name: 'Figma', value:70},
-  {name: 'Azure ', value: 20}
+  {name: 'Figma', value:70}
 ];
 
 // Select the container where skill circles will be added
