--- a/index.html
+++ b/index.html
@@ -592,11 +592,13 @@ const skills = [
   { name: 'ASP.NET', value: 90 },
   { name: 'C#', value: 90 },
   { name: 'SQL Server', value: 80 },
-  { name: 'HTML/CSS', value: 92 },
-  { name: 'JavaScript', value: 60 },
-  { name: 'Python', value: 40 },
+  { name: 'HTML/CSS', value: 85 },
+  { name: 'JavaScript', value: 50 },
+  { name: 'Python', value: 30 },
   { name: 'AI Tools', value: 70 },
-  {name: 'Figma', value:70}
+  {name: 'Figma', value:50},
+  {name: 'Bootstrap', value:60},
+  {name:'Wix Studio', value:70}
 ];
 
 // Select the container where skill circles will be added
